# IntelligenceInterface

./: .env  .gitignore  .intelligence-interface.json  .opencode.json  CLAUDE.md  README.md  TASK_4_IMPLEMENTATION_PROMPT.md  TASK_5_IMPLEMENTATION_PROMPT.md  TASK_6_IMPLEMENTATION_PROMPT.md  TASK_7_IMPLEMENTATION_PROMPT.md  config_test.go  go.mod  go.sum  intelligence-interface-schema.json  main.go
templates/projects/python_fastapi_sqlmodel/: .pre-commit-config.yaml  AUTHENTICATION_FIXES.md  GO_TO_PYTHON_MAPPING.md  INSTALL_MCP.md  LLM_USAGE.md  MCP_SERVER.md  PYTHON_TEMPLATE_SYSTEM_ARCHITECTURE.md  Pending.md  README.md.j2  debug_hierarchical_merge.py  debug_template.py  demo_configuration.py  demo_entity_domain_configuration.py  demo_hierarchical_configuration.py  justfile  mcp_server.py  pyhex.md  pyproject.toml  test_all_systems.py  test_auth_domain_fix.py  test_co_location_workflow.py  test_configuration_integration.py  test_entity_template_integration.py  validate_template_output.py
templates/projects/python_fastapi_sqlmodel/.claude/: Tasks.md  TechDebt.md  activeContext.md  bddWorkflows.md  coordinationContext.md  dartWorkflows.md  implementationFeedback.md  implementationLog.md  implementationLogs.md  intelligencePatterns.md  productContext.md  progress.md  projectbrief.md  promptTemplates.md  systemPatterns.md  techContext.md  testingContext.md  uv_usage_note.md
templates/projects/python_fastapi_sqlmodel/.claude/commands/: BDDImplementation.md  MemoryAssimilation.md  MemoryBank.md  MemoryCoordinator.md  Quickfire.md  README.md
templates/projects/python_fastapi_sqlmodel/.claude/implementation_logs/: task_EdUD2ZTTlQAI_use_case_configuration_support.md
templates/projects/python_fastapi_sqlmodel/app/: config.py.j2  main.py.j2
templates/projects/python_fastapi_sqlmodel/app/core/: README.md  layer_config.yaml
templates/projects/python_fastapi_sqlmodel/app/core/Health/: domain.yaml  entities.py  entities.yaml  exceptions.py  test_entities.py
templates/projects/python_fastapi_sqlmodel/app/core/{{domain}}/: domain.yaml  entities.py.j2  entities.yaml  exceptions.py.j2  test_exceptions.py.j2
templates/projects/python_fastapi_sqlmodel/app/domain/: README.md  __init__.py  configuration_merger.py
templates/projects/python_fastapi_sqlmodel/app/domain/Health/: domain.yaml  entities.py  test_exceptions.py
templates/projects/python_fastapi_sqlmodel/app/domain/{{domain}}/: __init__.py  domain.yaml  entities.py.j2  entities.yaml  exceptions.py.j2  test_entities.py.j2  test_exceptions.py.j2
templates/projects/python_fastapi_sqlmodel/app/interface/: layer_config.yaml
templates/projects/python_fastapi_sqlmodel/app/interface/Health/: dependencies.py  interface.yaml  protocols.py  router.py
templates/projects/python_fastapi_sqlmodel/app/interface/{{domain}}/: dependencies.py.j2  router.py.j2  router.py.j2.backup
templates/projects/python_fastapi_sqlmodel/app/repository/: README.md  __init__.py  layer_config.yaml
templates/projects/python_fastapi_sqlmodel/app/repository/Health/: protocols.py  repository.py  repository.yaml  test_repository.py
templates/projects/python_fastapi_sqlmodel/app/repository/{{domain}}/: repository.py.j2  repository.yaml  (+1 more)
templates/projects/python_fastapi_sqlmodel/app/service/: __init__.py  layer_config.yaml
templates/projects/python_fastapi_sqlmodel/app/usecase/: README.md  layer_config.yaml
templates/projects/python_fastapi_sqlmodel/cli/: __init__.py
templates/projects/python_fastapi_sqlmodel/cli/generate/: __init__.py  cli_tool.py  docs.py  generator.py  project_initializer.py  update_docs.py
templates/projects/python_fastapi_sqlmodel/cli/helpers/: __init__.py  generation_helpers.py  validation_helpers.py
templates/projects/python_fastapi_sqlmodel/cli/validate/: __init__.py  bug_verifier.py  config_validator.py  import_checker.py  j2lint_fixer.py  runtime_validator.py  syntax_checker.py  template_linter.py  test_generator.py  test_runner.py  whitespace_analysis.py  whitespace_validator.py
templates/projects/python_fastapi_sqlmodel/configs/: health_domain.yaml  health_entities.yaml
templates/projects/python_fastapi_sqlmodel/docs/: jinja2-linting.md
templates/projects/python_fastapi_sqlmodel/generator/core/: __init__.py  domain.py  initialize.py  layers.py  schema.py  validator.py
templates/projects/python_fastapi_sqlmodel/generator/interface/: __init__.py
templates/projects/python_fastapi_sqlmodel/generator/services/: __init__.py  base.py  core.py  interface.py  repository.py  service.py  usecase.py
templates/projects/python_fastapi_sqlmodel/generator/types/: __init__.py
templates/projects/python_fastapi_sqlmodel/generator/utils/: __init__.py  config_processor.py  logging_utils.py  schema.py  template_code_generator.py  type_aliases.py
templates/projects/python_fastapi_sqlmodel/python_fastapi_sqlmodel.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
templates/projects/python_fastapi_sqlmodel/scripts/: lint_templates.py
templates/projects/python_fastapi_sqlmodel/sprints/templates/: task-examples.md  task-prompt-template.md
templates/projects/python_fastapi_sqlmodel/test-project/: .env.sample  .gitignore  justfile  pyproject.toml
templates/projects/python_fastapi_sqlmodel/test-project/docs/: CO_LOCATION_GUIDE.md
templates/projects/python_fastapi_sqlmodel/test-project/templates/: CUSTOMIZATION_GUIDE.md
templates/projects/python_fastapi_sqlmodel/test/seta/: docker-compose.yml.j2  justfile  pyproject.toml
templates/projects/python_fastapi_sqlmodel/tests/: __init__.py  test_usecase_loader_integration.py
templates/projects/python_fastapi_sqlmodel/tests/bdd/: __init__.py  configuration_loading.feature  entity_domain_configuration.feature  hierarchical_configuration_merging.feature  usecase_configuration.feature
templates/projects/python_fastapi_sqlmodel/tests/fixtures/: sample_blog_domain.yaml  sample_user_domain.yaml
templates/projects/python_fastapi_sqlmodel/tests/unit/: __init__.py  test_configuration_loading.py  test_entity_domain_configuration.py  test_hierarchical_configuration_merging.py
(+349 files in other folders)
