[project]
name = "testauthproject"
version = "0.1.0"
description = "FastAPI SQLModel application: TestAuthProject"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",  # PostgreSQL
    "aiosqlite>=0.20.0",  # SQLite
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "hypothesis>=6.93.1",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.7.0",
    "ruff>=0.12.0",
]

testing = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.2.1",
    "hypothesis>=6.93.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
